--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,99 @@
-*{
-    box-sizing: border-box;
+body {
+    font-size: 16px;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #1a1a1a;
+    background-color: white;
+}
+
+
+/** HEADER **/
+
+#header-nav {
+    background-color: grey;
+    border-radius: 0;
+    border: 0;
+}
+
+#header-nav button {
+    margin-top: 22px;
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: #fce29e;
+}
+
+.navbar-collapse {
+    border-top: 0;
+}
+
+.navbar-brand, .navbar-nav li a {
+    line-height: 76px;
+    height: 76px;
+    padding-top: 0;
+}
+
+.navbar-brand h1 {
+    color: black;
+    font-family: 'Abril Fatface', cursive;
+    font-weight: bolder;
+    font-size: 1.8em;
+}
+
+.navbar-brand a:hover {
+    text-decoration: none;
+    text-shadow: 1px 1px 1px #fe9797;
+}
+
+#nav-list {
+    margin-top: 10px;
   }
-  
-  h1{
+  #nav-list a {
+    color: #951C49;
     text-align: center;
   }
-  
-  p {
-    background-color: #bfbfbf;
-    border: 1px solid black;
-    height: 140px;
-    margin-left: 10px;
-    margin-right: 20px;
-    padding: 40px 10px 5px 10px;
-    overflow: hidden;
+  #nav-list a:hover {
+    background: #E7E7E7;
   }
-  
-  
-  #container {
-    position: relative;
-    
-  }
-  
-  #p1 {
-    background-color: #D59898;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-weight: bold;
-    height: 35px;
-    width: 120px;
-    padding: 10px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  
-  }
-  #p2 {
-    background-color:aqua ;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-weight: bold;
-    height: 35px;
-    width: 120px;
-    padding: 10px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  
-  }
-  #p3 {
-   background-color: #E5D198;
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-weight: bold;
-    height: 35px;
-    width: 120px;
-    padding: 10px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  
-  }
-  
-  
-  .row {
-    width: 100%;
-  
+  #nav-list a span {
+    font-size: 1.8em;
   }
 
-@media(min-width:992px){
-    .col-lg-4{
-        float: left;
-        width: 33.33%;
-    }
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+    border: 1px solid black;
 }
-@media (min-width:768px) and (max-width:991px){
-    .col-md-6{
-         float: left;
-         width: 50%;
-    }
+
+  .navbar-header button.navbar-toggle {
+   
+    margin-top: -30px;
+  }
+
+/** END HEADER */
+
+
+/** HOME PAGE **/
+
+#main-content {
+    width: 92%;
+    margin-bottom: 40px;
 }
-@media(max-width:767px){
-    .col-sm-12{
-        float: left;
-        width: 100%;
-    }
+
+#main-content h2 {
+    font-size: 2.9em;
+    font-weight: bold;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
-     
+
+#main-content h3 {
+    font-size: 1.6em;
+    font-weight: bold;
+    margin-bottom: 1em;
+}
+
+#main-section {
+    background-color: cyan;
+    box-shadow: 0 0 50px grey;
+    padding: 30px;
+}
+
+/** END HOME PAGE **/
